--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@ Debe crear estilo a su eleccion -->
             </div>
         </div>
     </section>
+
+    <section id="galeria" class="informacion">
+        <h3 class="texto-30 informacion">Nuestro local</h3>
+        <div class="fondo-galeria">
+            <div class="galeria-local">
+                <img src="img/local.jpg" alt="">
+            </div>
+        </div>
+    </section>
+
     <section id="contacto" class="informacion">
         <h3 class="texto-30">Contactanos</h3>
         <form class="centrar-contacto" action="" method="">
