--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Debe crear estilo a su eleccion -->
         <h3 class="texto-30 informacion">Nuestro local</h3>
         <div class="fondo-galeria">
             <div class="galeria-local">
-                <img src="img/local.jpg" alt="">
+                <img src="img/local.jpg">
             </div>
         </div>
     </section>
