--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@ Debe crear estilo a su eleccion -->
     <meta http-equiv="X-UA-Compatible"content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Landing Page">
-    <title>LA TILINA</title>
+    <title>BAR LA TILINA</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <nav class="menu">
         <ul>
-            <li><a href="#Inicio">Inicio</a></li>
-            <li><a href="#galeria">Galeria</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="#final">Fin</a></li>
+            <li><a class="boton" href="#Inicio">Inicio</a></li>
+            <li><a class="boton" href="#galeria">Galeria</a></li>
+            <li><a class="boton" href="#contacto">Contacto</a></li>
+            <li><a class="boton" href="#final">Datos</a></li>
         </ul>
     </nav>
 
@@ -88,9 +88,9 @@ Debe crear estilo a su eleccion -->
         <div></div>
         <div class="redes">
             <p>Redes Sociales</p>
-        <div><a href="www.facebook.com"><i class="bi bi-facebook"></i> Facebook</a></div>
-        <div><a href="www.instagram.com"><i class="bi bi-instagram"></i> Instagram</a></div>
-        <div><a href="www.twitter.com"><i class="bi bi-twitter"></i> Twitter</a></div>
+        <a class="letra-redes" href= "https://www.facebook.com/barlatilina" target="_blank" ><i class="bi bi-facebook"></i> Facebook</a>
+        <a class="letra-redes" href= "https://www.instagram.com/barlatilina" target="_blank" ><i class="bi bi-instagram"></i> Instagram</a>
+        <a class="letra-redes" href= "https://www.twitter.com/barlatilina" target="_blank" ><i class="bi bi-twitter"></i> Twitter</a>
         </div>
     </footer>
 </body>
